# AstroScan

./: .gitignore  README.md  config.example.yaml  install_windows.bat  pyproject.toml  requirements.txt
astroscan/: __init__.py  __main__.py  cli.py  config.py  dewarper.py  knowledge_base.py  mineru_ocr.py  models.py  ocr.py  pipeline.py  preprocess.py  vision.py
