[project]
name = "astroscan"
version = "3.0.0"
description = "Book-to-knowledge-base pipeline: MinerU + Marker OCR, DocScanner dewarping, ChromaDB + Knowledge Graph"
requires-python = ">=3.10"
dependencies = [
    "marker-pdf>=1.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    # Knowledge Base v2
    "chromadb>=0.5.0",
    "networkx>=3.2",
]

[project.scripts]
astroscan = "astroscan.cli:cli"
